--- a/src/ex11_html-css-advanced/task-04.html
+++ b/src/ex11_html-css-advanced/task-04.html
@@ -59,33 +59,48 @@
       </ul>
 
       <ul class="sidebar__categories sidebar__section">
-          <li class="sidebar__categories-item"> 
-            <a href="#">
-              <i class="fa fa-circle circle-1" aria-hidden="true"></i>
-              <span>Must Read Title</span> 
-            </a>
-          </li>
-          <li class="sidebar__categories-item">
-            <a href="#">
-              <i class="fa fa-circle circle-2" aria-hidden="true"></i>
-              <span>Best Of List</span>
-            </a>
-          </li>
-          <li class="sidebar__categories-item">
-            <a href="#">
-              <i class="fa fa-circle circle-3" aria-hidden="true"></i>
-              <span>Classic Novels</span>
-            </a>
-          </li>
-          <li class="sidebar__categories-item">
-            <a href="#">
-              <i class="fa fa-circle circle-4" aria-hidden="true"></i>
-              <span>Non Fiction</span>
-            </a>
-          </li>
-        </ul>  
+        <li class="sidebar__categories-item"> 
+          <a href="#">
+            <i class="fa fa-circle circle-1" aria-hidden="true"></i>
+            <span>Must Read Title</span> 
+          </a>
+        </li>
+        <li class="sidebar__categories-item">
+          <a href="#">
+            <i class="fa fa-circle circle-2" aria-hidden="true"></i>
+            <span>Best Of List</span>
+          </a>
+        </li>
+        <li class="sidebar__categories-item">
+          <a href="#">
+            <i class="fa fa-circle circle-3" aria-hidden="true"></i>
+            <span>Classic Novels</span>
+          </a>
+        </li>
+        <li class="sidebar__categories-item">
+          <a href="#">
+            <i class="fa fa-circle circle-4" aria-hidden="true"></i>
+            <span>Non Fiction</span>
+          </a>
+        </li>
+      </ul> 
 
-      <!-- <i class="fa fa-clock-o history_clock" aria-hidden="true"></i> -->
+      <ul class="sidebar__history-list sidebar__section">
+        <li class="sidebar__history-list-item"> 
+          <i class="fa fa-clock-o history_clock" aria-hidden="true"></i>
+          <div class="sidebar__history-content">
+            <div >You added <span>Fight Club</span> by <span>Chuck Palahniuk</span> to your <span>Must Read Titles</span>.</div> 
+            <div class="sidebar__history-time">24 minutes ago</div>
+          </div> 
+        </li>
+        <li class="sidebar__history-list-item">
+          <i class="fa fa-clock-o history_clock" aria-hidden="true"></i>
+          <div lass="sidebar__history-content">
+              <div >You added <span>The Trial</span> by <span>Franz Kafka</span> to your <span>Must Read Titles</span>.</div> 
+              <div class="sidebar__history-time">48 minutes ago</div>
+          </div>
+        </li>
+      </ul>  
     </div>
     <footer>
     </footer>
