--- a/src/ex11_html-css-advanced/task-04.html
+++ b/src/ex11_html-css-advanced/task-04.html
@@ -95,7 +95,7 @@
         </li>
         <li class="sidebar__history-list-item">
           <i class="fa fa-clock-o history_clock" aria-hidden="true"></i>
-          <div lass="sidebar__history-content">
+          <div class="sidebar__history-content">
               <div >You added <span>The Trial</span> by <span>Franz Kafka</span> to your <span>Must Read Titles</span>.</div> 
               <div class="sidebar__history-time">48 minutes ago</div>
           </div>
