--- a/src/ex11_html-css-advanced/task-03.html
+++ b/src/ex11_html-css-advanced/task-03.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./task-03.css">
 </head>
 <body>
-  <form action="" method="get">
+  <form action="#" method="get">
     <div class="field row">
       <input type="text" name="title" id="title" placeholder="Title" required>
       <label for="title">Title</label>    
