--- a/src/ex10_html-css-fundamentals-part2/task-01.html
+++ b/src/ex10_html-css-fundamentals-part2/task-01.html
@@ -7,7 +7,7 @@
   <title>Task-01</title>
 </head>
 <body>
-  <form action="" method="get">
+  <form action="http://httpbin.org/get" method="get">
     <fieldset>
       <legend>Personal data</legend>
       <label> 
@@ -39,7 +39,7 @@
       <label>
         Country of Residence
           <select>
-            <option value=""></option>
+            <option value="empty" disabled selected>Select Country</option>
             <option value="russia">Russia</option>
             <option value="usa">USA</option>
           </select>
