--- a/src/ex8_html-css-basics/task-01.html
+++ b/src/ex8_html-css-basics/task-01.html
@@ -38,7 +38,7 @@
   </table>
   <img src="https://learn.webpurple.net/images/wp.png" alt="webpurple">
   <div>
-    <a href="https://learn.webpurp">Любимый сайт</a>
+    <a href="https://learn.webpurple.net">Любимый сайт</a>
   </div>
   <pre>
       import moment from 'moment';
