--- a/src/ex8_html-css-basics/task-04.html
+++ b/src/ex8_html-css-basics/task-04.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Task-02</title>
+  <title>Task-04</title>
   <link rel="stylesheet" href="./task-04.css">
   <style>
     .list {
@@ -13,10 +13,6 @@
 
     .circle {
       list-style-type: circle;
-    }
-
-    .square {
-      list-style-type: square;
     }
 
     .cat {
@@ -72,7 +68,7 @@
           <li>List item two with subitems:
             <ul class="circle">
               <li>Subitem 1
-                <ul class="square">
+                <ul style="list-style-type: square;">
                   <li>SubSubitem 1</li>
                   <li>SubSubitem 2</li>
                 </ul>
