--- a/src/ex10_html-css-fundamentals-part2/task-03.html
+++ b/src/ex10_html-css-fundamentals-part2/task-03.html
@@ -5,95 +5,65 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Task-03</title>
-  <script src="https://use.fontawesome.com/d9ddccb34b.js"></script>
-  <link rel="stylesheet" href="./task-03.css">
+  <link rel="stylesheet" href="./task-03-1.css">
+  <link rel="stylesheet" href="./task-03-2.css">
 </head>
 <body>
-  <header class="header wrapper flex">
-    <!-- <i class="fa fa-bars" aria-hidden="true"></i> -->
-    <div class="header__logo">
-      <a href="#" class="header__logo-link">logo</a>
-    </div>
-    <div class="header__contacts">
-      <div class="header__contacts-item">
-        <i class="fa fa-phone" aria-hidden="true"></i>
-        <p class="header__contact-text">+1 (234) 567-8900</p>
-      </div>
-      <div class="header__contacts-item">
-        <i class="fa fa-map-marker" aria-hidden="true"></i>
-        <p class="header__contact-text">Saudi Arabia. Alreyadah</p>
-      </div>
-      <div class="header__contacts-item">
-        <i class="fa fa-envelope-o" aria-hidden="true"></i>
-        <p class="header__contact-text">alreyadah@google.com</p>
-      </div>
-    </div>
-  </header>
-  <div class="menu">
-    <div class="wrapper flex">
-      <ul class="menu__nav">
-        <li class="menu__nav-item">
-          <a href="#" class="menu__nav-link">HOME</a>
-        </li>
-        <li class="menu__nav-item">
-          <a href="#" class="menu__nav-link">What about ISAMA?</a>
-        </li>
-        <li class="menu__nav-item">
-          <a href="#" class="menu__nav-link">What we do?</a>
-        </li>
-        <li class="menu__nav-item">
-          <a href="#" class="menu__nav-link">Our Projects</a>
-        </li>
-        <li class="menu__nav-item">
-          <a href="#" class="menu__nav-link">Excellent Team</a>
-        </li>
-        <li class="menu__nav-item">
-          <a href="#" class="menu__nav-link">Contact</a>
-        </li>
-      </ul>
-      <div class="menu__search">
-        <i class="fa fa-search" aria-hidden="true"></i>
-        <input class="menu__search-field" type="text" placeholder="Type your search words">
-      </div>      
-    </div>
-  </div>
-  <div class="main">
-    <div class="wrapper">
-      <div class="main__header">
-        <div class="main__header-text1">LET’S DRAW SOME ARTS</div>
-        <div class="main__header-text2">&</div>
-        <div class="main__header-text3">make your business much better</div>
-      </div>
-      <div class="header__gallery">
-        <div class="header__gallery-item">
-          <img src="./img/design1.png" alt="gallery">
-          <div class="header__gallery-text">
-            <i class="fa fa-heart-o" aria-hidden="true"></i>
-            <span>Like</span>
-          </div>
-        </div>
-        <div class="header__gallery-item">
-          <img src="./img/design2.png" alt="gallery">
-          <div class="header__gallery-text">
-            <i class="fa fa-heart-o" aria-hidden="true"></i>
-            <span>Like</span>
-          </div>
-        </div>
-        <div class="header__gallery-item">
-          <i class="fa fa-chevron-right"></i>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="about">
-    <div class="about__item">
-      <h3>What about ISAMA</h3>
-      <p>ISAMA is a marketing foundation located in Riyadh built on the talent of creation that leads to a modern concept of professionalism. At ISAMA we believe even if you are good at what you do, you have a great product or you provide an excellent service. We still can present you a little better to the world, creating your full identity, provides you with your marketing plans, design your website, print your publications, design your logo’s and offices. Simply we give your business the perfect image.</p>
-    </div>
-    <div class="about__item">
-      <h3>Why we exist</h3>
-      <p>Reaching customer satisfaction through providing them with cutting-edge technologies that give clients access to a wide range of tools, ensuring efficient and results-oriented communication solutions, which grant them a special character that distinguishes them from the others in the business.</p>
-    </div>  
-  </div>
+  <table class="table">
+		<tr>
+			<th class="table__head">customer</th>
+			<th class="table__head">phone</th>
+			<th class="table__head">mail</th>
+			<th class="table__head">outstanding</th>
+		</tr>
+		<tr class="table__row">
+			<td class="table__cell">jonny aviony</td>
+			<td class="table__cell">(740) 841-7566</td>
+			<td class="table__cell">into@johnyaviony.com</td>
+			<td class="table__cell">&#36; 2.400.00</td>
+		</tr>
+		<tr class="table__row">
+			<td class="table__cell">mark hammok</td>
+			<td class="table__cell">(800) 950-4511</td>
+			<td class="table__cell">markhammocklgmail.com</td>
+			<td class="table__cell">&#36; 700</td>
+		</tr>
+		<tr class="table__row">
+			<td class="table__cell">richlcl cross</td>
+			<td class="table__cell">(322) 841-7566</td>
+			<td class="table__cell">crossstation@gmail.com</td>
+			<td class="table__cell">&#36; 1.755.00</td>
+		</tr>
+		<tr class="table__row">
+			<td class="table__cell">flinn's shack</td>
+			<td class="table__cell">(740) 841-7566</td>
+			<td class="table__cell">help@flinns.com</td>
+			<td class="table__cell">&#36; 26.850.00</td>
+		</tr>
+		<tr class="table__row">
+			<td class="table__cell">flip justic</td>
+			<td class="table__cell">(322) 841-7566</td>
+			<td class="table__cell">flip.justick@gmail.com</td>
+			<td class="table__cell">&#36; 642.214.00</td>
+		</tr>
+		<tr class="table__row">
+			<td class="table__cell">summer evans</td>
+			<td class="table__cell">(800) 950-4511</td>
+			<td class="table__cell">summer@gmail.com</td>
+			<td class="table__cell">&#36; 700.00</td>
+		</tr>
+		<tr class="table__row">
+			<td class="table__cell">marco s. diaz</td>
+			<td class="table__cell">(800) 800-1111</td>
+			<td class="table__cell">s.diaz@gmail.com</td>
+			<td class="table__cell">&#36; 65.00</td>
+		</tr>
+		<tr class="table__row">
+			<td class="table__cell">ricky stwerat</td>
+			<td class="table__cell">(800) 800-2222</td>
+			<td class="table__cell">r.stwerat@gmail.com</td>
+			<td class="table__cell">&#36; 930.00</td>
+		</tr>
+	</table>  
 </body>
 </html>
