--- a/src/ex11_html-css-advanced/task-02.html
+++ b/src/ex11_html-css-advanced/task-02.html
@@ -8,8 +8,19 @@
   <link rel="stylesheet" href="./task-02.css">
 </head>
 <body>
-  <div class="animation1"></div>
-  <div class="animation2"></div>
-  <div class="animation3"></div>
+  <form action="#" method="get">
+    <div class="field row">
+      <input type="text" name="title" id="title" placeholder="Title" required>
+      <label for="title">Title</label>    
+    </div>
+    <div class="field col1">
+      <input type="text" name="price" id="price" placeholder="Price" required>
+      <label for="price">Price</label>  
+    </div>
+    <div class="field col2" >
+      <input type="text" name="location" id="location" placeholder="Location" required>
+      <label for="location">Location</label>  
+    </div>
+  </form>
 </body>
 </html>
