Fix validator errors

--- a/src/ex9_html-css-fundamentals-part1/task-03.html
+++ b/src/ex9_html-css-fundamentals-part1/task-03.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="button-wrap">
-    <button href="#" class="button">
+    <button class="button">
       Checkout
     </button>
   </div>            
