--- a/src/ex9_html-css-fundamentals-part1/task.html
+++ b/src/ex9_html-css-fundamentals-part1/task.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <form action="" class="form" novalidate>
+    <form action="#" class="form" novalidate>
       <div class="form__list">
         <div class="form__item">
           <h2 class="form__header">Form Here</h2>
