--- a/src/ex10_html-css-fundamentals-part2/task-02.html
+++ b/src/ex10_html-css-fundamentals-part2/task-02.html
@@ -10,20 +10,11 @@
   <form action="http://httpbin.org/get" method="get">
     <fieldset>
       <legend>Personal data</legend>
-      <label> 
-        Surname
-          <input type="text">
-      </label>
+      <label>Surname <input type="text"></label>
       <br>
-      <label> 
-        First name
-          <input type="text">
-      </label>
+      <label>First name <input type="text"></label>
       <br>
-      <label> 
-        Middle name
-          <input type="text">
-      </label>
+      <label>Middle name <input type="text"></label>
       <br>
       <span>You are</span>
       <input type="radio" name="sex" id="male">
@@ -31,18 +22,16 @@
       <input type="radio" name="sex" id="female">
       <label for="female">female</label>
       <br>
-      <label>
-        Age
-          <input type="number" min="18" max="101">
+      <label>Age
+        <input type="number" min="18" max="101">
       </label>
       <br>
-      <label>
-        Country of Residence
-          <select>
-            <option value="empty" disabled selected>Select Country</option>
-            <option value="russia">Russia</option>
-            <option value="usa">USA</option>
-          </select>
+      <label>Country of Residence
+        <select>
+          <option value="empty" disabled selected>Select Country</option>
+          <option value="russia">Russia</option>
+          <option value="usa">USA</option>
+        </select>
       </label>
       <br>
       <span>City</span>
@@ -54,50 +43,34 @@
       <label for="photo">Photography</label>
       <input type="file" name="photo" id="photo">
       <hr>
-      <label>
-        Title
-					<select multiple>
-						<optgroup label="Technologies">
-							<option>Web Master</option>
-							<option>Database Administrator</option>
-							<option>Computer-Aided design</option>
-						</optgroup>
-						<optgroup label="Finance">
-							<option>Economic Planning</option>
-							<option>Management accounting</option>
-							<option>Budgeting and planning</option>
-						</optgroup>
-          </select>
+      <label>Title
+        <select multiple>
+          <optgroup label="Technologies">
+            <option>Web Master</option>
+            <option>Database Administrator</option>
+            <option>Computer-Aided design</option>
+          </optgroup>
+          <optgroup label="Finance">
+            <option>Economic Planning</option>
+            <option>Management accounting</option>
+            <option>Budgeting and planning</option>
+          </optgroup>
+        </select>
       </label>
       <br>
-      <label>
-        Salary
-          <input type="range">
-      </label>
+      <label>Salary <input type="range"></label>
       <br>
       <textarea placeholder="Tell us about yourself..." cols="30" rows="10"></textarea>
     </fieldset>
     <fieldset>
       <legend>Contact Information</legend>
-      <label>
-        Site
-          <input type="url">
-      </label>
+      <label>Site <input type="url"></label>
       <br>
-      <label>
-        Email
-          <input type="email">
-      </label>
+      <label>Email <input type="email"></label>
       <br>
-      <label>
-        Phone
-          <input type="tel">
-      </label>
+      <label>Phone <input type="tel"></label>
     </fieldset>
-    <label>
-      Password
-        <input type="password">
-    </label>
+    <label>Password <input type="password"></label>
     <br>
     <input type="submit">
     <input type="reset">
