--- a/src/ex10_html-css-fundamentals-part2/task-04.html
+++ b/src/ex10_html-css-fundamentals-part2/task-04.html
@@ -9,94 +9,95 @@
   <link rel="stylesheet" href="./task-04.css">
 </head>
 <body>
-  <header >
-    <div class="header wrapper flex">
-      <i class="fa fa-bars" aria-hidden="true"></i>
-      <div class="header__logo">
-        <a href="#" class="header__logo-link">logo</a>
+  <header>
+    <i class="fa fa-bars menu-mobile" aria-hidden="true"></i>
+    <div class="wrapper flex header">
+      <div class="logo">
+        <a href="#" class="logo__link">logo</a>
       </div>
 
-      <div class="header__contacts">
-        <div class="header__contacts-item">
-          <i class="fa fa-phone" aria-hidden="true"></i>
-          <a href="tel:+" class="header__contact-text">1 (234) 567-8900</a>
+      <div class="popup">
+        <div class="popup__item">
+          <i class="fa fa-phone popup__icon" aria-hidden="true"></i>
+          <a href="tel:+" class="popup__text">1 (234) 567-8900</a>
         </div>
 
-        <div class="header__contacts-item">
-          <i class="fa fa-map-marker" aria-hidden="true"></i>
-          <a href="" class="header__contact-text">Saudi Arabia. Alreyadah</a>
+        <div class="popup__item">
+          <i class="fa fa-map-marker popup__icon" aria-hidden="true"></i>
+          <a href="" class="popup__text">Saudi Arabia. Alreyadah</a>
         </div>
 
-        <div class="header__contacts-item">
-          <i class="fa fa-envelope-o" aria-hidden="true"></i>
-          <a href="mailto:" class="header__contact-text">alreyadah@google.com</a>
+        <div class="popup__item">
+          <i class="fa fa-envelope-o popup__icon" aria-hidden="true"></i>
+          <a href="mailto:" class="popup__text">alreyadah@google.com</a>
         </div>
       </div>
     </div>
 
     <nav class="menu">
       <div class="wrapper flex">
-        <ul class="menu__nav">
-          <li class="menu__nav-item">
-            <a href="#" class="menu__nav-link">HOME</a>
+        <ul class="menu__list">
+          <li class="menu__item">
+            <a href="#" class="menu__link">HOME</a>
           </li>
 
-          <li class="menu__nav-item">
-            <a href="#" class="menu__nav-link">What about ISAMA?</a>
+          <li class="menu__item">
+            <a href="#" class="menu__link">What about ISAMA?</a>
           </li>
 
-          <li class="menu__nav-item">
-            <a href="#" class="menu__nav-link">What we do?</a>
+          <li class="menu__item">
+            <a href="#" class="menu__link">What we do?</a>
           </li>
 
-          <li class="menu__nav-item">
-            <a href="#" class="menu__nav-link">Our Projects</a>
+          <li class="menu__item">
+            <a href="#" class="menu__link">Our Projects</a>
           </li>
 
-          <li class="menu__nav-item">
-            <a href="#" class="menu__nav-link">Excellent Team</a>
+          <li class="menu__item">
+            <a href="#" class="menu__link">Excellent Team</a>
           </li>
 
-          <li class="menu__nav-item">
-            <a href="#" class="menu__nav-link">Contact</a>
+          <li class="menu__item">
+            <a href="#" class="menu__link">Contact</a>
           </li>
         </ul>
 
-        <div class="menu__search">
-          <i class="fa fa-search" aria-hidden="true"></i>
-          <input class="menu__search-field" type="text" placeholder="Type your search words">
+        <div class="search">
+          <i class="fa fa-search search__icon" aria-hidden="true"></i>
+          <input class="search__input" type="text" placeholder="Type your search words">
         </div>      
       </div>
     </nav>
   </header>
+  
   <main>
     <section class="main">
-      <div class="wrapper">
-        <div class="main__header">
-          <div class="main__header-text1">LET’S DRAW SOME ARTS</div>
-          <div class="main__header-text2">&</div>
-          <div class="main__header-text3">make your business much better</div>
+      <div class="wrapper main-inner">
+        <div class="slogan">
+          <div class="slogan__title">LET’S DRAW SOME ARTS</div>
+          <div class="slogan__sign"></div>
+          <div class="slogan__subtitle">make your business much better</div>
         </div>
   
-        <div class="header__gallery">
-          <div class="header__gallery-item">
+        <div class="gallery">
+          <div class="gallery__item">
             <img src="./img/design1.png" alt="gallery">
-            <div class="header__gallery-text">
-              <i class="fa fa-heart-o" aria-hidden="true"></i>
+            <div class="gallery__text">
+              <i class="fa fa-heart-o gallery__icon" aria-hidden="true"></i>
               <span>Like</span>
             </div>
           </div>
   
-          <div class="header__gallery-item ">
+          <div class="gallery__item">
             <img src="./img/design2.png" alt="gallery">
-            <div class="header__gallery-text yellow yellow-bg">
-              <i class="fa fa-heart-o yellow" aria-hidden="true"></i>
+            <div class="gallery__text yellow yellow-bg">
+              <i class="fa fa-heart-o gallery__icon yellow" aria-hidden="true"></i>
               <span>Like</span>
             </div>
           </div>
   
-          <div class="header__gallery-item">
-            <i class="fa fa-chevron-right"></i>
+          <div class="gallery__item">
+            <i class="fa fa-chevron-right gallery__icon"></i>
           </div>
         </div>
       </div>
@@ -104,22 +105,22 @@
   
     <section class="about wrapper">
       <div class="about__item">
-        <div class="about__item-img">
+        <div class="about__img">
           <img src="./img/icon1.png" alt="icon">
         </div>
   
-        <div class="about__item-text">
-          <h3>What about ISAMA</h3>
+        <div class="about__content">
+          <h3 class="about__title">What about ISAMA</h3>
           <p>ISAMA is a marketing foundation located in Riyadh built on the talent of creation that leads to a modern concept of professionalism. At ISAMA we believe even if you are good at what you do, you have a great product or you provide an excellent service. We still can present you a little better to the world, creating your full identity, provides you with your marketing plans, design your website, print your publications, design your logo’s and offices. Simply we give your business the perfect image.</p>    
         </div>
       </div>
   
       <div class="about__item">
-        <div class="about__item-img">
+        <div class="about__img">
           <img src="./img/icon2.png" alt="icon">
         </div>
   
-        <div class="about__item-text">
+        <div class="about__content">
           <h3>Why we exist</h3>
           <p>Reaching customer satisfaction through providing them with cutting-edge technologies that give clients access to a wide range of tools, ensuring efficient and results-oriented communication solutions, which grant them a special character that distinguishes them from the others in the business.</p>
         </div>
@@ -127,7 +128,7 @@
     </section>
   </main>
 
-  <footer>
+  <footer class="footer">
     <p>External courses - EPAM, 2019.</p> 
   </footer>
 </body>
