--- a/src/ex11_html-css-advanced/task-01.html
+++ b/src/ex11_html-css-advanced/task-01.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="./task-01.css">
 </head>
 <body>
-  <div class="animation1"></div>
-  <div class="animation2"></div>
-  <div class="animation3"></div>
+  <div class="loader"></div>
+  <div class="ball"></div>
+  <div class="wrap"></div>
 </body>
 </html>
