--- a/src/ex16_js-async/task-02.html
+++ b/src/ex16_js-async/task-02.html
@@ -8,15 +8,16 @@
   <link rel="stylesheet" href="task-02.css">
 </head>
 <body>
-  <section class="search">
-    <label for="input">Поиск по названию</label>
-    <input type="text" class="input" id="input">
-  </section>
-  <section class="articles">
-    <h2>Список статей</h2>
-    <table class="table">
-    </table>
-  </section>
+  <main class="main">
+    <section class="search">
+      <label for="input" class="label">Поиск по названию</label>
+      <input type="text" class="input" id="input">
+    </section>
+    <section class="articles">
+      <table class="table">
+      </table>
+    </section>      
+  </main>
   <script src="task-02.js"></script>
 </body>
 </html>
